--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 
 common = {version="0.1.0", path="../common"}
+rocket = "=0.5.0-rc.3"
+
+[dependencies.rocket_dyn_templates]
+version = "=0.1.0-rc.3"
+features = ["tera"]
