--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 
 common = {version="0.1.0", path="../common"}
 rocket = "=0.5.0-rc.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.rocket_dyn_templates]
 version = "=0.1.0-rc.3"
 features = ["tera"]
+
